c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/libraries/system_call.c
int putchar(int c);

int incr_and_print(int b) {
    return putchar(b + 2);
}