c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_types/extra_credit/bitwise_op_function.c
int x(void);

int main(void) {
    x >> 2;
    return 0;
}